[package]
name = "publish"
version = "0.1.0"
edition = "2021"
authors = ["jr conlin <src+publish@jrconlin.com>"]

[dependencies]
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
markdown = { version = "0.3" }
tera = { version = "1.20" }
toml = { version = "0.8" }
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = { version = "2.7", features = [
    "dynamic-keys",
    "max_level_trace",
    "release_max_level_info",
] }
slog-async = "2.6"
slog-envlogger = "2.2.0"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.6"
thiserror = "2.0"
uuid = { version = "1.1", features = ["serde", "v4"] }
tokio = { version = "1.41", features = ["full"] }
tokio-macros = { version = "2.4" }
